# FurOS64

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  linkerscript.ld
.cache/clangd/index/: font3.c.7DEFA168DD2E8D3C.idx  main.c.6A15030EF937ECD2.idx  vga.c.BCAAE08744E12DCD.idx
efi/: CMakeLists.txt
efi/.cache/clangd/index/: efi.h.5AC95336B0F804BA.idx  efi_nii.h.38226805200F992F.idx  efiapi.h.22F47CD8EC6F839A.idx  efibind.h.B09F5D3F0F56F9F6.idx  eficompiler.h.B834C63C5CD08D97.idx  eficon.h.646CD6AD7606FBD3.idx  eficonex.h.045A08BD7563B90F.idx  efidebug.h.ABC99EB929D95160.idx  efidef.h.0E098C30200F00C2.idx  efidevp.h.BDCC6A5849BE59E2.idx  efifs.h.4F6CF175E2E9D97C.idx  efiip.h.C032F7C71CC1C056.idx  efilib.h.065F5A3C61C487FF.idx  efilib.h.8F3DD9CC51E23EED.idx  efilibplat.h.47E054BBA51CC8E3.idx  efilink.h.25BDB3635C3907BF.idx  efilink.h.9B4DDD11A4EA8B12.idx  efinet.h.25E0D81F9F1A04F5.idx  efipart.h.F83055AE2198F1D1.idx  efipoint.h.AE2D5B9461FDB83F.idx  efiprot.h.3334C043EC364C40.idx  efipxebc.h.68B2BE4F0D4B2780.idx  efirtlib.h.301A21A350E43D38.idx  efiser.h.AEAB5586B03D6D68.idx  efisetjmp.h.E14A50BDB1B23118.idx  efisetjmp_arch.h.2E432490008DDFDE.idx  efishell.h.D57B5AD4012219C0.idx  efistdarg.h.00F2C503ACBA7A29.idx  efitcp.h.6A0E1F736EC41733.idx  efiudp.h.A52B72D2A15E3D1F.idx  efiui.h.011BEFB7FF35A55D.idx  libsmbios.h.AB31CF19C5E50052.idx  main.c.9BCDF8D0C531CED2.idx  pci22.h.0F66013FE3FBC8B5.idx
efi/lib/gnu-efi/x86_64/apps/: AllocPages.efi  FreePages.efi  bltgrid.efi  ctors_dtors_priority_test.efi  ctors_test.efi  debughook.efi  debughook.efi.debug  drv0.efi  drv0_use.efi  exit.efi  lfbgrid.efi  modelist.efi  printenv.efi  route80h.efi  setdbg.efi  setjmp.efi  t.efi  t2.efi  t3.efi  t4.efi  t5.efi  t6.efi  t7.efi  t8.efi  tcc.efi  unsetdbg.efi
efi/run/: OVMF.fd  fat.img  hello.str  run.sh
efi/src/: EFI_STUB.c  fileloader.c  main.c
include/: kernel_args.h
include/Arch/Interrupts/: idt.h
include/Drivers/: vga.h
include/Interrupts/: idt.h
include/MemoryManagment/: MemoryManager.h
include/Terminal/: stdio.h
include/stdlib/: string.h
run/: fat.img  run.bat  run.sh
src/: font3.c  main.c
src/Arch/GDT/: setgdt.asm
src/Arch/Interrupts/: idt.c
src/Drivers/: vga.c
src/Interrupts/: idt.c
src/MemoryManagment/: physical.c
src/Terminal/: stdio.c
src/stdlib/: string.c
